--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-oci_provider_variables.auto.tfvars
-oci_compute_variables.auto.tfvars
-terraform.exe
-terraform-provider-oci_v5.30.0.exe
+**/.terraform/*
+*.tfstate
+*.tfstate.*
