--- a/ansible-code/roles/certbot/tasks/main.yml
+++ b/ansible-code/roles/certbot/tasks/main.yml
@@ -2,4 +2,45 @@
 - name: Install Certbot
   apt:
     name: python3-certbot-nginx
-    state: present
+    update_cache: yes
+    state: latest
+
+- name: Ensure the SSL directories exist
+  ansible.builtin.file:
+    path: /"{{ item }}"
+    state: directory
+    mode: "0755"
+  loop:
+    - etc/ssl/private
+    - etc/ssl/csr
+
+- name: Ensure the directory /etc/letsencrypt exists
+  ansible.builtin.file:
+    path: /etc/letsencrypt
+    state: directory
+    mode: "0755"
+
+- name: Create a private key for "{{ domain_name }}"
+  community.crypto.openssl_privatekey:
+    path: "{{ private_key_path }}"
+    size: 2048
+
+- name: Generate a CSR for {{ domain_name }}
+  community.crypto.openssl_csr:
+    path: "{{ csr_path }}"
+    privatekey_path: "{{ private_key_path }}"
+    common_name: "{{ domain_name }}"
+
+- name: Generate a Let's Encrypt certificate for your domain
+  community.crypto.acme_certificate:
+    account_key_src: /etc/letsencrypt/account.key
+    challenge: http-01
+    csr: "{{ csr_path }}"
+    dest: /etc/letsencrypt/live/"{{ domain_name }}"/cert.pem
+    fullchain_dest: /etc/letsencrypt/live/"{{ domain_name }}"/fullchain.pem
+    chain_dest: /etc/letsencrypt/live/"{{ domain_name }}"/chain.pem
+    acme_directory: https://acme-v02.api.letsencrypt.org/directory
+    acme_version: 2
+    terms_agreed: yes
+    account_email: "{{ certbot_email }}"
+  notify: Restart NGINX
