--- a/ansible-code/roles/common/tasks/main.yml
+++ b/ansible-code/roles/common/tasks/main.yml
@@ -1,5 +1,11 @@
 ---
-- name: Update apt cache
-  apt:
-    update_cache: yes
+- name: Update and upgrade packages
+  ansible.builtin.apt:
+    update_cache: true
     cache_valid_time: 3600
+    name: "*"
+    state: latest
+
+- name: Update the OS
+  ansible.builtin.apt:
+    upgrade: dist
