--- a/ansible-code/roles/certbot/vars/main.yml
+++ b/ansible-code/roles/certbot/vars/main.yml
@@ -1,6 +1,6 @@
 ---
-certbot_email: "karlodukwe@gmail.com"
-domain_name: "wanderingshibe.duckdns.org"
+certbot_email: "lodissianaria@tutanota.com"
+domain_name: "wanderingshibe.xyz"
 challenge_var: "http-01"
 csr_path: "/etc/ssl/csr/{{ domain_name }}.csr"
 private_key_path: "/etc/ssl/private/{{ domain_name }}.key"
